webpack基本配置、模块、插件使用。

--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="./main.js"></script>
+  <p>说金钱是罪恶，都在捞;说美女是祸水，都想要;说高处不胜寒，都在爬;说烟酒伤身体，都不戒;说天堂最美好，都不去!</p>
 </body>
 </html>
